--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
