--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "@mantine/hooks": "^5.10.4",
     "@mantine/next": "^5.10.4",
     "@next/font": "13.1.6",
+    "@thirdweb-dev/auth": "^3.0.6",
+    "@thirdweb-dev/react": "^3.9.5",
+    "@thirdweb-dev/sdk": "^3.9.5",
     "@types/node": "^18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-typical": "^0.1.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^6.0.8",
     "next": "13.1.6",
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-typed": "^1.2.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
