--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/react-typical": "^0.1.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "ethers": "^6.0.8",
+    "ethers": "5",
+    "framer-motion": "^10.0.1",
     "next": "13.1.6",
     "prisma": "^4.10.1",
     "react": "18.2.0",
